<resources>
    <string name="app_name" translatable="false">ImgzavreDges</string>
    <string name="title_notes">ნოუთები</string>
    <string name="title_dashboard">დეშბორდი</string>
    <string name="title_notifications">თრიფი</string>
    <string name="enter_city">გთხოვთ აირჩიოთ ქალაქი</string>
    <string name="weather_btn">შესრულება</string>
    <string name="current_weather">აქ გამოჩნდება ამჟამინდელი ამინდი</string>
    <string name="error_weather">რაღაც რიგზე ვერაა, სცადეთ მოგვიანებით</string>
    <string name="api_key" translatable="false">a98ca7720a8fd711bb8548bf2373e263</string>
    <string name="temperature_is">ტემპერატურა შენს ქალაქში არის: </string>
    <string name="feels_like">იგრძნობა როგორც: </string>
    <string name="wind_speed">ქარის სიჩქარე: </string>
    <string name="weather_desc">აღწერილობა: </string>
    <string name="degree_cels" translatable="false">℃</string>
    <string name="speed">KM/H</string>
    <string name="type_input">Auto</string>
    <string name="greeting_auth">გამარჯობა!</string>
    <string name="enter_name_auth">გთხოვთ ჩაწერეთ თქვენი სახელი</string>
    <string name="btn_auth">წავედით</string>
    <string name="add_a_note">დავამატოთ ნოუთი</string>
    <string name="hello_user">გამარჯობა მეგობარო</string>
    <string name="description">როდის?</string>
    <string name="title">რა გაკეთდა?</string>
    <string name="save_a_note">ნოუთის შენახვა</string>
    <string name="update_note">ნოუთის შეცვლა</string>
    <string name="wow_such_empty">ჩანაწერები ცარიელია!</string>
    <string name="web_site">ვებ საიტი</string>
    <string name="both_fields_required">ორივე ველი აუცილებელია</string>
    <string name="kms_placeholder">შენი ბოლო მგზავრობა:</string>
    <string name="enter_data">შეიყვანე დატა</string>
    <string name="enter_odometer">ორდომეტრი (KM)</string>
    <string name="enter_price">ლიტრის ფასი</string>
    <string name="submit">შესრულება</string>
    <string name="km" translatable="false"> KM</string>
    <string name="ok" translatable="false">OK</string>
    <string name="zero" translatable="false">0.0</string>
    <string name="last_ride_price">Cost:</string>
    <string name="welcome_to_imgzavredges">მოგესალმებით აპლიკაციაში</string>
    <string name="manage_your_car_like_you_want">მართე შენი ავტომობილი</string>
    <string name="continue_text">გაგრძელება</string>
    <string name="almost_there_text">თითქმის ბოლოში ხარ!</string>
    <string name="enter_some_data_text">შეიყვანე დატა შენი მანქანის შესახებ</string>
    <string name="enter_car_consumption_per_100km">შეიყვანე წვა ლიტრებში 100km-ზე</string>
    <string name="enter_car_fuel_tank_capacity">შეიყვანე საწვავის ავზის მოცულობა</string>
    <string name="on_item_deleted">ნოუთი წაშლილია</string>
    <string name="undo">გაუქმება</string>
    <string name="hello_user_text">"გამარჯობა,"</string>
    <string name="edit_text_odometer_error">შეიყვანე ორდომეტრი</string>
    <string name="field_must_be_filled">ეს ველი აუცილებლად უნდა იქნეს შევსებული</string>
    <string name="enter_city_message">შეიყვანე ქალაქი!</string>
    <string name="enter_new_data">შეიყვანე ახალი დატა</string>
    <string name="save">დამახსოვრება</string>
    <string name="distance_text">დისტანცია:</string>
    <string name="select_a_date">მონიშნე თარიღი</string>
    <string name="you_spent">შენ დახარჯე</string>
    <string name="co2_you_ve_produced">CO2 რაც გამოუშვი:</string>
    <string name="if_you_use_gasoline">ბენზინი:</string>
    <string name="if_you_use_diesel">დიზელი:</string>
    <string name="plan_a_ride">დაგეგმე თრიფი:</string>
    <string name="litres_have_left">ლიტრი ავზში</string>
    <string name="litres_symbol">L</string>
    <string name="grams_sign">g</string>
    <string name="you_will_spend">შენ დახარჯავ:</string>
    <string name="co2_you_will_produce">CO2 რასაც გამოუშვებ:</string>
    <string name="distance">დისტანცია (KM)</string>
    <string name="next_ride">შემდეგი თრიფი</string>
    <string name="last_ride">ბოლო თრიფი</string>
    <string name="enter_current_fuel_level">ამჟამინდელი ავზის მდგომარეობა</string>
    <string name="remains_in_the_tank">დარჩენილი საწვავი:</string>
    <string name="hey_there">გამარჯობა მეგობარო!</string>
    <string name="please_let_us_know_your_odometer_reading">გთხოვთ, შეგვატყობინოთ თქვენი ოდომეტრის მაჩვენებელი</string>
    <string name="remove_odometer_reading">ოდომეტრის მონაცემების წაშლა</string>
    <string name="are_you_sure">დარწმუნებული ხარ ? </string>
    <string name="delete_all_data">შენ წაშლი ძველი რაიდის ოდომეტრის მონაცემებს</string>
    <string name="no">არა</string>
    <string name="yes">კი</string>
    <string name="fuel_level_is_bigger_than_capacity">არ შეგიძლია გქონდეს იმაზე მეტი ბენზინი ვიდრე ავზის მოცულობა</string>
    <string name="full_tank">მთლიანი ავზი</string>
    <string name="thunderstorm">მეხის ცვენა</string>
    <string name="drizzle">ჟინჟღლავს</string>
    <string name="rain">წვიმა</string>
    <string name="snow">თოვლი</string>
    <string name="cloudy">ღრუბლიანი</string>
    <string name="few_clouds">ოდნავ ღრუბლიანი</string>
    <string name="sunny">მოწმენდილი ცა</string>
    <string name="squalls">ნიტო ამინდი</string>
    <string name="tornado">ტირადო</string>
    <string name="fog">ნისლიანი</string>
    <string name="no_data">ვერ მოიძებნა მონაცემი</string>
    <string name="description_weather">აღწერილობა</string>
    <string name="temperature">ტემპერატურა</string>
    <string name="no_gps_text">GPS ჩართვა</string>
    <string name="you_ve_entered_wrong_odometer_readings">ოდომეტრის რიცხვი არასწორადაა ჩაწერილი</string>
    <string name="wind">ქარი</string>
    <string name="kyiv">კიევი</string>
    <string name="select_date_text">აირჩიე თარიღი</string>
    <string name="balloon_refueling">ბენზინის ჩასხმის შემდეგ შეგიძლია ჩაწერო</string>
    <string name="balloon_edit_profile_here">შეცვალე პროფილი</string>
    <string name="balloon_odometer_readings">წაშალე ოდომეტრის ინფორმაცია</string>
    <string name="internet_error">არარის ინტერნეტთან წვდომა</string>
    <string name="balloon_fuelStats">შეგიძლია შეცვალო სტატუსი მარჯვნივ სვაიპით</string>
    <string name="all_fields_must_be_filled">ყველა ველი უნდა იყოს შევსებული</string>
</resources>