<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingTop="14dp"
    android:paddingBottom="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/last_ride_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:lines="1"
            android:text="@string/last_ride"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/speedometer_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_marginEnd="5dp"
            android:id="@+id/speedometer_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_speedometer"
            app:layout_constraintBottom_toBottomOf="@id/last_ride_title"
            app:layout_constraintEnd_toStartOf="@id/last_odometer_text"
            app:layout_constraintTop_toTopOf="@id/last_ride_title" />

        <TextView
            android:id="@+id/last_odometer_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/zero"
            app:layout_constraintBottom_toBottomOf="@id/speedometer_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/speedometer_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/odometer_edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/odometer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_odometer"
            android:inputType="numberDecimal"
            android:maxLength="14"
            android:nextFocusDown="@id/price_text"
            android:textColorHint="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_price"
            android:inputType="numberDecimal"
            android:maxLength="14"
            android:nextFocusDown="@id/submit_btn_fuel"
            android:textColorHint="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn_fuel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/dark"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:cornerRadius="20dp" />

</LinearLayout>