<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/remove_odometer_readings_animation"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/ic_remove_odometer_readings" />


            <TextView
                android:id="@+id/title"
                style="@style/WelcomeDialogTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/remove_odometer_readings_animation" />

            <TextView
                android:id="@+id/sub_title"
                style="@style/WelcomeDialogSubTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/delete_all_data"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/no_btn"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/dark"
                android:text="@string/no"
                android:textColor="@color/white"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/sub_title"
                app:layout_constraintTop_toBottomOf="@+id/sub_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yes_btn"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/yes"
                android:textColor="@color/dark"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/sub_title"
                app:layout_constraintTop_toBottomOf="@+id/sub_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>