<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trip.last_ride_fragments.ecology.EcologyLastRideFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/dark"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/co2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:text="@string/co2_you_will_produce"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gasoline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:text="@string/if_you_use_gasoline"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/co2_text" />

            <TextView
                android:id="@+id/gasoline_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/gasoline"
                app:layout_constraintStart_toEndOf="@+id/gasoline"
                app:layout_constraintTop_toTopOf="@+id/gasoline" />

            <TextView
                android:id="@+id/diesel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:text="@string/if_you_use_diesel"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gasoline" />

            <TextView
                android:id="@+id/diesel_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/diesel"
                app:layout_constraintEnd_toEndOf="@+id/gasoline_count"
                app:layout_constraintStart_toStartOf="@+id/gasoline_count"
                app:layout_constraintTop_toTopOf="@+id/diesel" />

            <ImageView
                android:id="@+id/ecology_impact_new_ride_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:src="@drawable/ecology_new_ride"
                app:layout_constraintBottom_toBottomOf="@+id/diesel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/gasoline" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>