<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome_screens.WelcomeFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/greeting_animation"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginHorizontal="40dp"
        android:scaleX="-1.6"
        android:scaleY="1.6"
        app:layout_constraintBottom_toTopOf="@+id/welcome_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/ic_welcome" />


    <TextView
        android:id="@+id/welcome_text"
        style="@style/WelcomeDialogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="-80dp"
        android:fontFamily="@font/source_sans_pro_bold"
        android:text="@string/welcome_to_imgzavredges"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/manage_your_car_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_animation" />

    <TextView
        android:id="@+id/manage_your_car_text"
        style="@style/WelcomeDialogSubTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/manage_your_car_like_you_want"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_next_btn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/dark"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>