<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">

    <ImageView
        android:id="@+id/figure_on_bottom_sheet"
        android:layout_width="30dp"
        android:layout_height="6dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/figure_on_bottom_sheet_dialog" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/full_tank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginVertical="10dp">

        <ImageView
            android:id="@+id/icon_full_tank"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_full_tank"
            app:layout_constraintBottom_toBottomOf="@+id/full_tank_text"
            app:layout_constraintEnd_toStartOf="@+id/full_tank_text"
            app:layout_constraintTop_toTopOf="@+id/full_tank_text" />

        <TextView
            android:id="@+id/full_tank_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_tank"
            android:textColor="@color/gray"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fuel_in_tank_edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fuel_in_tank_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_current_fuel_level"
            android:inputType="numberDecimal"
            android:maxLength="14"
            android:textColorHint="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn_fuel_in_tank"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/dark"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:cornerRadius="20dp" />
</LinearLayout>